# gitlab-ci-helper

./: .dockerignore  .env  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pylintrc  .shellcheckrc  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  cliff.toml  commitlint.config.js  pyproject.toml  requirements.txt
.github/: .build.env  matrix.yml
.github/workflows/: build-image.yml  dockerfile-check.yml  shellscripts-check.yml
.gitlab/: .build.env.yml  matrix.yml
.gitlab/workflows/: .gitlab-ci.yml  build-image.yml
scripts/: test-container.sh  test-image.sh  test.sh
scripts/vault/: .envconsul_version  envconsul_config.j2  generate_envconsul_config.py  generate_envconsul_config.sh  install_envconsul.sh  vault_login.sh
src/gitlab_ci/: __init__.py  generate_config.py
taskfiles/: b2v.yml  mkdocs.yml  pre-commit.yml  uv.yml
tests/: test_generate_config.py
tests/data/: config_data.yaml
tests/templates/: config_template.j2
tests/vault/: vault_matrix
